--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -21,5 +21,9 @@
         <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
         <p>{{ form.submit() }}</p>
         <p>New User? <a href="{{ url_for('register') }}">Cick to Register!</a></p>
+        <p>
+          Forgot Password?
+          <a href="{{ url_for('reset_password_request') }}"> Click to Reset</a>
+        </p>
     </form>
 {% endblock %}
